--- a/config/config.json
+++ b/config/config.json
@@ -9,10 +9,20 @@
           "manifest": "./src/webparts/staffCrud/StaffCrudWebPart.manifest.json"
         }
       ]
+    },
+    "leave-app-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/leaveApp/LeaveAppWebPart.js",
+          "manifest": "./src/webparts/leaveApp/LeaveAppWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {},
   "localizedResources": {
-    "StaffCrudWebPartStrings": "lib/webparts/staffCrud/loc/{locale}.js"
+    "StaffCrudWebPartStrings": "lib/webparts/staffCrud/loc/{locale}.js",
+    "LeaveAppWebPartStrings": "lib/webparts/leaveApp/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js"
   }
 }
