--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@microsoft/sp-office-ui-fabric-core": "1.17.1",
     "@microsoft/sp-property-pane": "1.17.1",
     "@microsoft/sp-webpart-base": "1.17.1",
+    "@pnp/sp": "^3.16.0",
+    "@pnp/spfx-controls-react": "^3.14.0",
     "moment": "^2.29.4",
     "office-ui-fabric-react": "^7.199.1",
     "react": "17.0.1",
